page(footer-redesigned): footer newly designed

--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,14 @@ body {
   @apply bg-green-800/30 border-l-4 border-green-300 rounded-md p-3 text-[12px] md:text-[16px] lg:text-[16px] text-zinc-200;
 }
 
+/* FOOTER */
+.footer-dark {
+  @apply bg-green-700/30  border-green-600 rounded-md p-3 text-[12px] md:text-[16px] lg:text-[16px] text-gray-800;
+}
+.footer-light {
+  @apply bg-green-700/30 border-green-300 rounded-md p-3 text-[12px] md:text-[16px] lg:text-[16px] text-zinc-200;
+}
+
 /* FORM */
 .label {
   @apply block text-sm font-normal mb-2;
