--- a/src/index.css
+++ b/src/index.css
@@ -115,10 +115,10 @@ body {
 
 /* FOOTER */
 .footer-dark {
-  @apply bg-green-700/30  border-green-600 rounded-md p-3 text-[12px] md:text-[16px] lg:text-[16px] text-gray-800;
+  @apply bg-green-300 rounded-t-2xl;
 }
 .footer-light {
-  @apply bg-green-700/30 border-green-300 rounded-md p-3 text-[12px] md:text-[16px] lg:text-[16px] text-zinc-200;
+  @apply bg-green-700/30 rounded-t-2xl;
 }
 
 /* FORM */
