--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
 
 /* ICONS */
 .icons {
-  @apply bg-green-600 text-black rounded-full hover:bg-zinc-700 hover:text-white transition-all duration-500 cursor-pointer hover:translate-y-1;
+  @apply bg-gray-500 text-white rounded-full hover:bg-zinc-700 hover:text-white transition-all duration-500 cursor-pointer  hover:scale-[1.3];
 }
 
 /* TYPOGRAPHY */
