page(footer): position refined for all the components in the structure

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,8 @@ body {
 
 /* TYPOGRAPHY */
 .headline-one-dark,
-.headline-two-dark {
+.headline-two-dark,
+.headline-three-dark {
   @apply max-w-max;
   background: -webkit-linear-gradient(0deg, #fafafa, #179e15);
   background-clip: text;
@@ -40,7 +41,8 @@ body {
 }
 
 .headline-one-light,
-.headline-two-light {
+.headline-two-light,
+.headline-three-light {
   @apply max-w-max;
   background: -webkit-linear-gradient(0deg, #181818, #179e15);
   background-clip: text;
@@ -52,6 +54,9 @@ body {
 }
 .headline-two {
   @apply text-3xl lg:text-4xl lg:leading-tight font-semibold;
+}
+.headline-three {
+  @apply text-2xl lg:text-3xl lg:leading-tight font-semibold;
 }
 
 .paragraph-document-dark {
