--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,9 @@ body {
 
 /* TYPOGRAPHY */
 .headline-one-dark,
-.headline-two-dark {
+.headline-two-dark,
+.headline-three-dark,
+.headline-four-dark {
   @apply max-w-max;
   background: -webkit-linear-gradient(0deg, #fafafa, #179e15);
   background-clip: text;
@@ -40,7 +42,9 @@ body {
 }
 
 .headline-one-light,
-.headline-two-light {
+.headline-two-light,
+.headline-three-light,
+.headline-four-light {
   @apply max-w-max;
   background: -webkit-linear-gradient(0deg, #181818, #179e15);
   background-clip: text;
@@ -52,6 +56,12 @@ body {
 }
 .headline-two {
   @apply text-3xl lg:text-4xl lg:leading-tight font-semibold;
+}
+.headline-three {
+  @apply text-2xl lg:text-3xl lg:leading-tight font-semibold;
+}
+.headline-four {
+  @apply text-xl lg:text-2xl lg:leading-tight font-semibold;
 }
 
 .paragraph-document-dark {
@@ -99,10 +109,10 @@ body {
 
 /* SNIPPETS */
 .snippet-light {
-  @apply border border-black rounded-md;
+  @apply border-1 border-green-300 rounded-md; 
 }
 .snippet-dark {
-  @apply border border-white rounded-md;
+  @apply border-1 border-green-600 rounded-md; 
 }
 
 /* INFORMATION BLOCK */
